# Personal-Projects

./: README.md  TestPyPi Token.txt  setup.cfg  setup.py
DRF_Course/: db.sqlite3  manage.py  requirements.txt
DRF_Course/DRF_Course/: asgi.py  settings.py  urls.py  wsgi.py
DRF_Course/watchlist/: admin.py  models.py  urls.py  views.py
FFLASH_dj/: .env  db.sqlite3  manage.py  requirements.txt
FFLASH_dj/FLASH_dj/: asgi.py  settings.py  urls.py  wsgi.py
FFLASH_dj/flash_test/: apps.py  views.py
FFLASH_dj/templates/: index.html  index_live.html  index_sec.html
Fin_calc_widget/: index.html
blogram/: db.sqlite3
blogram/accounts/: forms.py
blogram/blog/: models.py  serializers.py  views.py
blogram/blogram/: asgi.py  settings.py  urls.py  wsgi.py
bookmarks/: cert.crt  cert.key
bookmarks/account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/bookmarks/: settings.py  urls.py
bookmarks/images/: admin.py  forms.py  models.py  urls.py  views.py
bookmarks/templates/: base.html
celery_tutorial/: celerybeat-schedule  db.sqlite3  requirements.txt
celery_tutorial/cel/: views.py
celery_tutorial/cel2/: apps.py  email.py  forms.py  tasks.py  views.py
core/: docker-compose.yml  requirements.txt
coredocker/: db.sqlite3  manage.py  requirements.txt
ddrf_tutorial/: .env  Dockerfile  db.sqlite3  requirements.txt
djangoProject4/: db.sqlite3
djangoProject5/: db.sqlite3
flask_tutorial/: app.py  test.db
locations/: db.sqlite3  requirements.txt
packaging_tutorial/: setup.py
testing/: test.py
testing(copy)/: test.py
(+167 files in other folders)
