[metadata]
name = flash-paymob
version = 1.0.0
author = Paymob
author_email = menessy@paymob.com
description = Paymob FLASH SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PaymobAccept/paymob-python
project_urls =
    Documentation = https://docs.paymob.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
